--- a/RoomMe/app/src/main/res/layout/fragment_profile.xml
+++ b/RoomMe/app/src/main/res/layout/fragment_profile.xml
@@ -8,20 +8,20 @@
     <!-- TODO: Update blank fragment layout -->
 
     <RelativeLayout
-        android:layout_width="343dp"
-        android:layout_height="483dp"
-        tools:layout_editor_absoluteY="23dp"
-        tools:layout_editor_absoluteX="6dp">
+        android:layout_width="344dp"
+        android:layout_height="495dp"
+        tools:layout_editor_absoluteX="8dp"
+        tools:layout_editor_absoluteY="8dp">
 
         <android.support.v7.widget.CardView
             android:id="@+id/card_view"
-            android:layout_width="310dp"
+            android:layout_width="300dp"
             android:layout_height="250dp"
             android:layout_alignParentTop="true"
             android:layout_centerHorizontal="true"
+            android:layout_marginTop="20dp"
             tools:layout_editor_absoluteX="40dp"
-            tools:layout_editor_absoluteY="1dp"
-            android:layout_marginTop="20dp">
+            tools:layout_editor_absoluteY="1dp">
 
 
             <RelativeLayout
@@ -77,37 +77,37 @@
             android:id="@+id/edit_profile"
             android:layout_width="206dp"
             android:layout_height="50dp"
+            android:layout_above="@+id/signOut"
+            android:layout_centerHorizontal="true"
             android:layout_marginBottom="27dp"
             android:layout_marginLeft="77dp"
             android:layout_marginRight="8dp"
+            android:background="@color/colorPrimary"
             android:text="Edit Profile"
+            android:textColor="@color/White"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.993"
-            android:layout_above="@+id/signOut"
-            android:layout_centerHorizontal="true"
-            android:background="@color/colorPrimary"
-            android:textColor="@color/White"/>
+            app:layout_constraintVertical_bias="0.993" />
 
         <Button
             android:id="@+id/signOut"
             android:layout_width="206dp"
             android:layout_height="50dp"
+            android:layout_alignParentBottom="true"
+            android:layout_alignStart="@+id/edit_profile"
             android:layout_marginBottom="53dp"
+            android:background="@color/colorPrimary"
             android:text="Sign Out"
+            android:textColor="@color/White"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="1.0"
-            android:background="@color/colorPrimary"
-            android:textColor="@color/White"
-            android:layout_alignParentBottom="true"
-            android:layout_alignStart="@+id/edit_profile" />
+            app:layout_constraintVertical_bias="1.0" />
 
     </RelativeLayout>
 
