--- a/RoomMe/app/src/main/res/layout/fragment_new_contract.xml
+++ b/RoomMe/app/src/main/res/layout/fragment_new_contract.xml
@@ -278,10 +278,23 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/img_view"
-            app:layout_constraintBottom_toBottomOf="parent"
             android:textSize="20sp"
             style="@style/AppTheme.PrimaryButton"
             android:text="@string/save_btn"
+            tools:layout_editor_absoluteX="8dp" />
+
+        <Button
+            android:id="@+id/delete_contract"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/create_contract_btn"
+            android:backgroundTint="@android:color/holo_red_light"
+            android:textSize="20sp"
+            style="@style/AppTheme.PrimaryButton"
+            android:text="@string/delete_btn"
+            android:visibility="gone"
             tools:layout_editor_absoluteX="8dp" />
 
     </android.support.constraint.ConstraintLayout>
