--- a/RoomMe/app/src/main/res/layout/fragment_profile.xml
+++ b/RoomMe/app/src/main/res/layout/fragment_profile.xml
@@ -73,7 +73,7 @@
 
         </android.support.v7.widget.CardView>
 
-        <Button
+        <!--Button
             android:id="@+id/edit_profile"
             android:layout_width="206dp"
             android:layout_height="50dp"
@@ -90,15 +90,16 @@
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.993" />
+            app:layout_constraintVertical_bias="0.993" /-->
 
         <Button
             android:id="@+id/signOut"
             android:layout_width="206dp"
             android:layout_height="50dp"
             android:layout_alignParentBottom="true"
-            android:layout_alignStart="@+id/edit_profile"
-            android:layout_marginBottom="53dp"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentEnd="true"
+            android:layout_margin="53dp"
             android:background="@color/colorPrimary"
             android:text="Sign Out"
             android:textColor="@color/White"
